connected viewmodel to view

--- a/WpfApplication/MainWindow.xaml
+++ b/WpfApplication/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <ListBox HorizontalAlignment="Left" Height="244" Margin="30,47,0,0" VerticalAlignment="Top" Width="182"/>
+
     </Grid>
 </Window>
