--- a/WpfApplication/MainWindow.xaml
+++ b/WpfApplication/MainWindow.xaml
@@ -1,14 +1,20 @@
 ﻿<Window x:Class="WpfApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="533" Width="525">
     <Grid>
-        <ListBox ItemsSource="{Binding Contacts}" HorizontalAlignment="Left" Height="244" Margin="30,47,0,0" VerticalAlignment="Top" Width="182">
+        <ListBox ItemsSource="{Binding Contacts}" SelectedItem="{Binding CurrentContact}" HorizontalAlignment="Left" Height="244" Margin="30,47,0,0" VerticalAlignment="Top" Width="182">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Firstname}" />
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Label Content="{Binding CurrentContact.Firstname}" HorizontalAlignment="Left" Margin="280,47,0,0" VerticalAlignment="Top"/>
+        <Button Content="Remove Contact" HorizontalAlignment="Left" Margin="317,257,0,0" VerticalAlignment="Top" Width="144" Click="Button_Click"/>
+        <TextBox x:Name="BtnFirstName" HorizontalAlignment="Left" Height="23" Margin="59,375,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="BtnLastName" HorizontalAlignment="Left" Height="23" Margin="59,403,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="BtnEmail" HorizontalAlignment="Left" Height="23" Margin="59,432,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Add Contact" HorizontalAlignment="Left" Margin="224,435,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-1.227,0.8" Click="Button_Click_1"/>
     </Grid>
 </Window>
