--- a/WpfApplication/MainWindow.xaml
+++ b/WpfApplication/MainWindow.xaml
@@ -11,10 +11,9 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <Label Content="{Binding CurrentContact.Firstname}" HorizontalAlignment="Left" Margin="280,47,0,0" VerticalAlignment="Top"/>
-        <Button Content="Remove Contact" HorizontalAlignment="Left" Margin="317,257,0,0" VerticalAlignment="Top" Width="144" Click="Button_Click"/>
-        <TextBox x:Name="BtnFirstName" HorizontalAlignment="Left" Height="23" Margin="59,375,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="BtnLastName" HorizontalAlignment="Left" Height="23" Margin="59,403,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="BtnEmail" HorizontalAlignment="Left" Height="23" Margin="59,432,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Add Contact" HorizontalAlignment="Left" Margin="224,435,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-1.227,0.8" Click="Button_Click_1"/>
+        <Label Content="{Binding CurrentContact.LastName}" HorizontalAlignment="Left" Margin="280,96,0,0" VerticalAlignment="Top"/>
+        <Label Content="{Binding CurrentContact.email}" HorizontalAlignment="Left" Margin="280,124,0,0" VerticalAlignment="Top"/>
+
+
     </Grid>
 </Window>
